# lsda

./: .gitignore  README.md  prediction.ipynb  pyproject.toml
lsda/: avg_temp_in_us.ipynb  bar_chart.py  conditions_and_temp.ipynb  main.py  prediction.ipynb  temp_fig.ipynb  temp_fig.py  weather_conditions_around_the_world.ipynb
lsda/data/: GlobalWeatherRepository.csv  __init__.py
